--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main id="game" class="hidden">
       <section class="player player--0 player--active">
-        <h2 class="name" id="name--0">Reeva</h2>
+        <h2 class="name" id="name--0">Player 1</h2>
         <p class="score" id="score--0">0</p>
         <div class="current">
           <p class="current-label">Current</p>
@@ -46,7 +46,7 @@
         </div>
       </section>
       <section class="player player--1">
-        <h2 class="name" id="name--1">Riddhi</h2>
+        <h2 class="name" id="name--1">Player 2</h2>
         <p class="score" id="score--1">0</p>
         <div class="current">
           <p class="current-label">Current</p>
