--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/6185388766.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <title>Roll to victory</title>
   </head>
   <body>
