Fixed bugs for smoother  gameplay

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
           <input type="text" id="game-id" placeholder="Enter Game ID" />
           <button id="join-game" class="btn">Join Game</button>
         </div>
+        <div class="loading-spinner"></div>
+        <p class="loading-text">Creating game, please wait...</p>
         <p id="game-id-display" class="hidden"></p>
         <button id="play-offline" class="btn">Play Offline</button>
       </div>
