--- a/offline_index.html
+++ b/offline_index.html
@@ -12,31 +12,7 @@
     <title>Roll to victory</title>
   </head>
   <body>
-    <section id="instructions" class="instructions">
-      <h1>Roll to victory!</h1>
-
-      <ul>
-        <li>Two players compete to reach 100 points first.</li>
-        <li>
-          On your turn, roll the dice. Add the rolled number to your current
-          score.
-        </li>
-        <li>
-          If you roll a 1, your turn ends, and you lose your current score.
-        </li>
-        <li>
-          You can choose to hold and save your current score, passing the turn
-          to the other player.
-        </li>
-        <li>
-          Power-ups appear only once per player when their score reaches 30, and
-          can give you an advantage or hinder your opponent!
-        </li>
-      </ul>
-      <button id="start-game" class="start-btn">Start Game</button>
-    </section>
-
-    <main id="game" class="hidden">
+    <main id="game">
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1</h2>
         <p class="score" id="score--0">0</p>
