Fixed bugs for smoother  gameplay

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="multiplayer-menu hidden">
-        <button id="back-to-initial-menu" class="btn btn--back">🡰</button>
+        <button id="back-to-initial-menu" class="btn btn--back">← Back</button>
         <button id="create-game" class="btn">Create New Game</button>
 
         <button id="joining-btn" class="btn">Join Game</button>
@@ -33,7 +33,9 @@
         <p id="game-id-display" class="hidden"></p>
       </div>
       <div class="join-game hidden">
-        <button id="back-to-multiplayer-menu" class="btn btn--back">🡰</button>
+        <button id="back-to-multiplayer-menu" class="btn btn--back">
+          ← Back
+        </button>
         <input type="text" id="game-id" placeholder="Enter Game ID" />
         <button id="join-game" class="btn">Join Game</button>
       </div>
